[workspace]
members = ["shared", "notification_provider"]

[workspace.package]
version = "2.0.3"
edition = "2021"
publish = false
repository = "https://github.com/F0903/AutoPower"

[package]
name = "autopower"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size. Speed isn't that important for this.
strip = true        # Remember to set this to false for inspecting asm or such
opt-level = "z"
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[workspace.dependencies]
bincode = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
windows = { version = "^0.52" }

[dependencies]
autopower_shared = { path = "shared" }
bincode = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
