[workspace]
members = ["shared", "autopower_proxy"]

[workspace.package]
version = "3.0.0"
edition = "2021"
publish = false
repository = "https://github.com/F0903/AutoPower"

[package]
name = "autopower"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size. Speed isn't that important for this.
strip = true        # Remember to set this to false for inspecting asm or such
opt-level = "z"
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[workspace.dependencies]
bincode = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
windows = { version = "^0.58" }

[dependencies]
autopower_shared = { path = "shared" }
bincode = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Services",
    "Win32_System_Threading",
] }
serde = { workspace = true }
