[workspace]
members = ["shared", "autopower_proxy"]

[workspace.package]
version = "3.0.1"
edition = "2021"
publish = false
repository = "https://github.com/F0903/AutoPower"

[package]
name = "autopower"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size. Speed isn't that important for this.
strip = true        # Remember to set this to false for inspecting asm or such
opt-level = "z"
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[workspace.dependencies]
bincode = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
windows = { version = "^0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WinRT",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[dependencies]
autopower_shared = { path = "shared" }
bincode = { workspace = true }
windows = { workspace = true }
serde = { workspace = true }
