[package]
name = "autopower_proxy"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopower_shared = { path = "../shared" }
bincode = { workspace = true }
windows = { workspace = true, features = [
    "Foundation",
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_System_Power",
    "Win32_System_Registry",
] }
serde = { workspace = true }
serde_json = { workspace = true }
