[package]
name = "autopower_proxy"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopower_shared = { path = "../shared" }
bincode = { workspace = true }
windows = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
