[package]
name = "autopower_notification_provider"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopower_shared = { path = "../shared" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
windows = { version = "0.48", features = [
    "Foundation",
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Com",
    "Win32_System_Console",
] }
