[package]
name = "autopower_shared"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
once_cell = "^1.17"
time = { version = "^0.3", features = ["formatting"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
windows = { version = "0.48", features = [
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
] }
