[package]
name = "autopower_shared"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[lib]

[dependencies]
once_cell = "^1.18"
time = { version = "^0.3", features = ["formatting"] }
windows = { workspace = true, features = [
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WinRT",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
] }
serde = { workspace = true }
bincode = { workspace = true }
