[package]
name = "autopower_shared"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[lib]

[dependencies]
once_cell = "^1.18"
time = { version = "^0.3", features = ["formatting"] }
windows = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
